src/test/ui/consts/const-eval/issue-43197.stderr
warning: any use of this value will cause an error
  --> $DIR/issue-43197.rs:10:20
   |
LL |     const X: u32 = 0 - 1;
   |     ---------------^^^^^-
   |                    |
   |                    attempt to compute `0_u32 - 1_u32`, which would overflow
   |
note: the lint level is defined here
  --> $DIR/issue-43197.rs:3:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

warning: any use of this value will cause an error
  --> $DIR/issue-43197.rs:13:24
   |
LL |     const Y: u32 = foo(0 - 1);
   |     -------------------^^^^^--
   |                        |
   |                        attempt to compute `0_u32 - 1_u32`, which would overflow
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-43197.rs:16:23
   |
LL |     println!("{} {}", X, Y);
   |                       ^ referenced constant has errors

warning: erroneous constant used
  --> $DIR/issue-43197.rs:16:23
   |
LL |     println!("{} {}", X, Y);
   |                       ^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this warning originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-43197.rs:16:26
   |
LL |     println!("{} {}", X, Y);
   |                          ^ referenced constant has errors

warning: erroneous constant used
  --> $DIR/issue-43197.rs:16:26
   |
LL |     println!("{} {}", X, Y);
   |                          ^ referenced constant has errors
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>
   = note: this warning originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0080`.
